MDEV-5445 Server crashes in Item_func_like::fix_fields on LIKE ExtractValue(..) backporting from the main 10.0

modified:
  mysql-test/r/func_like.result
  mysql-test/t/func_like.test
  sql/item_cmpfunc.cc